--- a/includes/token_list_print.css
+++ b/includes/token_list_print.css
@@ -53,3 +53,12 @@
 .table > tbody > tr > td {
   vertical-align: middle;
 }
+
+.status-date {
+  display: block;
+  font-size: 12px;
+  color: #9b9b9b;
+  padding: 0;
+  margin: 0;
+  margin-top: -7px;
+}
