--- a/includes/token_list_print.css
+++ b/includes/token_list_print.css
@@ -13,14 +13,18 @@
     border: 0 !important;
   }
   footer,
-  .not-print {
+  .not-print,
+  .dataTables_length,
+  .dataTables_filter,
+  .dataTables_paginate,
+  .dataTables_info {
     display: none !important;
   }
   .box-body {
     padding: 0 !important;
   }
   .token-list {
-    font-size: 14px !important;
+    font-size: 15px !important;
   }
 }
 
@@ -42,7 +46,7 @@
 .token-list td,
 .token-list th {
   text-align: center;
-  padding: 8px;
+  padding: 6px 8px;
   border: 1px solid #f2f2f2;
 }
 
