--- a/includes/token_list_print.css
+++ b/includes/token_list_print.css
@@ -24,11 +24,11 @@
     padding: 0 !important;
   }
   .token-list {
-    font-size: 14px !important;
+    font-size: 15px !important;
   }
   .token-list td,
   .token-list th {
-    padding: 5px !important;
+    padding: 6px 8px !important;
   }
 }
 
@@ -43,14 +43,13 @@
 .token-list {
   border-collapse: collapse;
   border-spacing: 0;
-  width: 100%;
   border: 1px solid #c6c6c6;
 }
 
 .token-list td,
 .token-list th {
   text-align: center;
-  padding: 6px;
+  padding: 6px 8px;
   border: 1px solid #f2f2f2;
 }
 
