--- a/includes/token_list_print.css
+++ b/includes/token_list_print.css
@@ -24,6 +24,7 @@
     padding: 0 !important;
   }
   .token-list {
+    min-width: 13.5in !important;
     font-size: 15px !important;
   }
   .token-list td,
